# template-project

./: Makefile  README.md  blarney-template-project.cabal  cabal.project
src/: Main.hs
